FIX: scrollbar visible dashboard

--- a/area/src/app/dashboard/dashboard.page.scss
+++ b/area/src/app/dashboard/dashboard.page.scss
@@ -16,7 +16,6 @@
     align-self: center;
     text-align: center;
     width: 85%;
-    overflow-y: scroll;
     font-size: xx-large;
     font-weight: bolder;
 }
